--- a/test_1NEY_chain_B_with_ligand_and_residues.html
+++ b/test_1NEY_chain_B_with_ligand_and_residues.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="https://3Dmol.csb.pitt.edu/build/3Dmol.js"></script>
+<script src="3Dmol.js"></script>
 <script src="log4javascript.js"></script>
 <script src="script_protein.js"></script>
 </head>
