--- a/test_TIM_loop_Q64_I78.html
+++ b/test_TIM_loop_Q64_I78.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="https://3Dmol.csb.pitt.edu/build/3Dmol.js"></script>
+<script src="3Dmol.js"></script>
 <script src="log4javascript.js"></script>
 <script src="script_protein.js"></script>
 </head>
