--- a/tests/test_DNA_helix_oligo.html
+++ b/tests/test_DNA_helix_oligo.html
@@ -5,13 +5,13 @@
 <script src="../build/assembledTsol3d.js"></script>
 </head>
 <body>
-<h2>DNA_alpha_helix_oligo</h2>
+<h2>DNA_helix_oligo</h2>
 <div id="viewerButtonsDiv"></div>
 <div id="viewerDiv" style="height: 600px; width: 600px; position: relative;"></div>
 <div id="viewerAdminDiv"></div>
 <script>
     $(document).ready(function() {
-        $tsol3d.export_dnaAlphaHelixOligo.build("viewerDiv", "viewerButtonsDiv",
+        $tsol3d.export_dnaHelixOligo.build("viewerDiv", "viewerButtonsDiv",
             "viewerAdminDiv", "../data/DNAv2.pdb");
     });
 </script>
